<resources>
    <string name="app_name">Matin_Noohnezhad_Assignment_2</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm">Confirm</string>
    <string name="sign_up">Don\'t have an account? Sign up</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="confirm_pass">Confrim Password</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="language">Language</string>
    <string name="send_confirm">Send Confirmation To:</string>
    <string name="email">Email</string>
    <string name="sms">Sms</string>
    <string name="due_tasks">Due Tasks</string>
    <string name="export_tasks">Export Tasks</string>
    <string name="import_tasks">Import Tasks</string>
    <string name="profile">Profile</string>
    <string name="archived_tasks">Archived Tasks</string>
    <string name="exit">Exit</string>
    <string-array name="langs_array">
        <item>English</item>
        <item>Persian</item>
        <item>Arabic</item>
        <item>French</item>
    </string-array>
    <string name="dialog_box_title">User Profile</string>
    <string name="dialog_box_message">my message</string>
    <string name="ok">OK</string>

</resources>
